Agregado el contenido adicional del blog y otra tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,8 @@
         <div id="post">
             <h1>Titulo atractivo del post</h1>
             <p>Y este es el parrafo de inicio</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo corrupti sed doloribus distinctio quasi maiores? Praesentium velit tenetur qui quis eos delectus, eaque doloremque ipsa sunt error distinctio, officia tempora.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore deserunt optio fugiat consequatur earum itaque nostrum ipsum. Similique aliquid, vitae quis, laudantium enim modi cumque facere ipsum quisquam quae voluptas?</p>
         </div>
     </div>
 </body>
